# StronkEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Demo/: CMakeLists.txt
Demo/include/: Game.hpp
Demo/src/: Game.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: Example.hpp
Engine/src/: Example.cpp
